--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,85 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+*{
+    margin: 0px;
+    padding: 0px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+   font-family: 'Oswald', sans-serif ! important;
+   margin-left: 40px;
+   margin-right:40px;
+   margin-top: 20px;
+   
+}
+.heading{
+    display: flex;
+    justify-content: space-between;
+    flex-basis: 100%;
+}
+.navLink{
+    text-decoration: none;
+    color: black;
+    margin: 10px;
+    cursor: pointer;
+
+}
+.logo{
+    display: flex;
+    font-size: 30px;
+}
+
+.right{
+    display: flex;
+    gap: 2em;
+}
+
+.wrapper{
+    margin: 26px;
+    margin-top: 15px;
+    border:1px solid rgb(187, 184, 184);
+    padding: 30px 60px 30px 60px;
+    border-radius: 5px;
+}
+
+.subtotal, .shipping-Estimate, .tax-Estimate, .Order-total {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+    margin: 3px;
+    font-size: 20px;
+}
+
+.Cart-count{
+    color:red;
+}
+.cart-icon {
+    position: relative;
+    display: inline-block;
+}
+ .badge {
+    position: absolute;
+    right: -5px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 5px;
+    font-size: 14px;
+    font-weight: bold;
+ }
+ .card:hover{
+    border:solid grey;
+
+}
+.emptyCart{
+    display:flex;
+    gap:2em;
+    margin-left:20%;
+    align-items: center;
+}
+.Quantity-button{
+    min-height:3%;
+    min-width:3%;
+    margin-left:3px;
+    border-radius:20px;
+    border-color:red;
 }
